--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -69,12 +69,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4d78d36-55f1-4917-83ef-f831c44cfacb",
+   "cell_type": "markdown",
+   "id": "9f904b1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "→ L'intérêt de déléguer à un algorithme la prédiction du risque obstétrique peut se situer à plusieurs niveaux. D’abord, il pourrait se substituer aux examens plus poussés pouvant être nécessaires pour dépister ce risque, comme les tests d'ADN fœtal dans le sang maternel qui utilisés pour révéler des anomalies à un stade précoce. Ceci est intéressant dans la mesure où ces tests sont potentiellement complexes à mettre en place dans des pays moins favorisés que ceux occidentaux, pour des raisons financières ou pratiques (technologie nécessaire non disponible par exemple). Les différentes variables mobilisées dans le modèle prédictif qui est construit ici sont des grandeurs aisément mesurables par une infirmière, voire même par un appareil automatique. S'affranchir des analyses médicales plus poussées permettrait ensuite de gagner un temps certain, pour les patients mais aussi pour le professionnel de santé qui peuvent se concentrer sur d'autres tâches. D’autre part, sans nécessairement remplacer totalement l’avis d'un professionnel de santé mais en appuyant son raisonnement, un tel algorithme pourrait également améliorer la précision des diagnostics, avec une détection multifactorielle qui pourrait même éventuellement corriger une erreur humaine de diagnostic.\n",
+    "\n",
+    "→ Néanmoins, déléguer cette prédiction à un algorithme fait craindre des dérives de plusieurs nature :\n",
+    "- Des dérives éthiques si cet algorithme sert de base à la décision, celle de ne pas avoir d’enfant par exemple, voire même d’interrompre une grossesse. Il est discutable de fonder un tel choix sur le résultat d’un algorithme prédictif. Surtout, il serait éthiquement contestable de recourir à un tel algorithme sans en informer les patientes. Les données médicales récoltées pour entraîner le modèle pourraient également  devenir problématiques si l’on parvient à les désanonymiser. Se pose également la question de la responsabilité en cas d’erreur de prédiction : à qui l’attribuer ?\n",
+    "- Des dérives sociales dans la mesure où la population dans laquelle ont été récoltées les données est plutôt défavorisée, et qu’il est donc possible que seulement les personnes les plus aisées de cette dernière aient pu avoir accès aux mesures dont les résultats constituent la jeu de données. Dès lors, le modèle fournira potentiellement de meilleures prédictions sur cette part de la population que sur le reste, d'où une forme d’inégalité sociale émergeant de cette reproduction des biais.\n",
+    "- Des dérives économiques si l’algorithme en question est utilisé pour réduire les équipes médicales d’un service pour une question d’économie budgétaire.\n",
+    "- Des dérives psychologiques dans la mesure certaines femmes peuvent  mal vivre le fait que l'expertise d'un professionnel de santé soit remplacée, totalement ou en partie, par un algorithme prédictif. Ceci est d’autant plus valable que l'on touche ici à la question potentiellement sensible de la gestation, donc la dimension humaine importe.\n"
+   ]
   },
   {
    "cell_type": "markdown",
