--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -905,6 +905,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b233959",
+   "metadata": {},
+   "source": [
+    "Avis ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe6d841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardisation des données\n",
+    "fig = plt.figure(figsize=(5, 5)) # forcer une figure carrée\n",
+    "\n",
+    "data_400m_std = (my_data['400m'] - np.mean(my_data['400m']))/(np.std(my_data['400m']))\n",
+    "data_shotput_std = (my_data['Shot.put'] - np.mean(my_data['Shot.put']))/(np.std(my_data['Shot.put']))\n",
+    "\n",
+    "plt.scatter(data_400m_std, data_shotput_std, s=50)\n",
+    "\n",
+    "plt.xlabel('400m (performance standardisée)')\n",
+    "plt.ylabel('Lancer du poids (performance standardisée)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56",
    "metadata": {},
    "source": [
