--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -441,7 +441,9 @@
     "En revanche, la température et la fréquence cardiaque au repos n’apportent pas beaucoup d’information pour distinguer les classes. \n",
     "\n",
     "Il y a donc un certain recouvrement entre les groupes mais les écarts restent visibles pour plusieurs variables. On peut s’attendre à ce que le modèle arrive à distinguer une partie des cas même si la séparation ne sera pas parfaite.\n",
-    "La prédiction ne sera pas triviale mais elle semble faisable. \n"
+    "La prédiction ne sera pas triviale mais elle semble faisable. \n",
+    "\n",
+    "# judidieux de faire une ACP après. "
    ]
   },
   {
@@ -823,7 +825,8 @@
    "source": [
     "Quand on applique le plus proche voisin avec k=1 sur le jeu d’entraînement, chaque point a pour plus proche voisin lui-même (distance nulle) : il n’y a ni faux positifs ni faux négatifs. Donc, l’algorithme retrouve forcément la bonne étiquette pour chaque point sauf si deux points différents ont exactement les mêmes coordonnées mais des étiquettes différentes (ce qui n'est pas le cas ici comme cela est montré ci-dessous). \n",
     "\n",
-    "Ainsi, la précision équilibrée du plus proche voisin (k=1) sera de 1. "
+    "Ainsi, la précision équilibrée du plus proche voisin sera de 1. \n",
+    "# intéret d'avoir un  jeu de validation"
    ]
   },
   {
@@ -1295,7 +1298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
