Fin de la qust° 8 et 10. Le restant sera fini par Honoré (corrections)

--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "28",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "3ea3ba57",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "Text(0.5, 1.0, 'Représentation des données selon les 2 composantes principales')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "f9d8f5af",
    "metadata": {},
    "outputs": [
@@ -603,17 +603,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "34",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Age  Tension systolique  Tension diastolique  \\\n",
+      "Age                  1.000000            0.482660             0.428986   \n",
+      "Tension systolique   0.482660            1.000000             0.728700   \n",
+      "Tension diastolique  0.428986            0.728700             1.000000   \n",
+      "Glycémie             0.523127            0.412167             0.409977   \n",
+      "Température         -0.218975           -0.239331            -0.224814   \n",
+      "FC au repos          0.034682           -0.064791            -0.085336   \n",
+      "\n",
+      "                     Glycémie  Température  FC au repos  \n",
+      "Age                  0.523127    -0.218975     0.034682  \n",
+      "Tension systolique   0.412167    -0.239331    -0.064791  \n",
+      "Tension diastolique  0.409977    -0.224814    -0.085336  \n",
+      "Glycémie             1.000000    -0.095702     0.121770  \n",
+      "Température         -0.095702     1.000000     0.155140  \n",
+      "FC au repos          0.121770     0.155140     1.000000  \n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 1.0, 'Corrélation entre les différentes variables')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,6 +652,7 @@
    "source": [
     "# Calcul de la matrice de corrélation deux à deux\n",
     "corr_matrix = df_train.drop(columns=['Risque']).corr()\n",
+    "print(corr_matrix)\n",
     "\n",
     "# Initialisation figure\n",
     "plt.figure(figsize=(5, 4))\n",
@@ -660,7 +682,9 @@
    "cell_type": "markdown",
    "id": "36",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cette matrice de corrélation révèle que les variables de la température et de la fréquence cardiaque au repos sont très peu corrélées à l'ensemble des autres variables (avec un coefficient de Pearson toujours inférieur à 0.25 en valeur absolue). Elles apportent donc chacune de l’information nouvelle. On observe ensuite que les quatre variables de l’âge, de la tension systolique, de la tension diastolique et de la glycémie sont quant à elles plutôt corrélés positivement entre elles (avec au minimum un coefficient de Pearson de 0.4). Ceci signifie qu'il existe une part de redondance dans l’information qu’elles apportent. On comprend donc qu'il serait possible de réduire la dimension du problème en synthétisant ces variables avec de nouvelles variables moins nombreuses mais d'autant plus discriminantes pour les données. Ce serait le principe de la réduction de dimension avec une analyse par composante principale, par exemple.  D'autre part, on peut utiliser cette matrice de corrélation pour réduire directement la dimension des données en sélectionnant des variables. Notamment, la tension systolique et la tension diastolique sont très fortement corrélées, avec un coefficient de Pearson de plus de 0,7. Il serait donc envisageable de supprimer l'une des deux variables sans perte conséquente d’information."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -768,11 +792,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "58db03e8",
    "metadata": {},
    "source": [
-    "→ Accuracy : on regarde  sur quoi on se trompe au total: qualifier le taux d'erreur sans tenir compte des malades ou non-malades.\n",
-    "BA : moyenne des taux d'erreurs dans chacune des populations des malades et non-malades. Plus fin . Absurde : taux d'erreur . Mets plus en valeur les erreurs memem si le cardinal des malades est faible. "
+    "L’accuracy quantifie la proportion totale d'observations correctement étiquetées. Cela peut s'avérer insuffisant pour sélectionner un classifieur optimal dans le cas où le caractère que l'on cherche à identifier (comme par exemple la présence d'un risque obstétrique élevé) est très minoritaire dans l'ensemble des observations. Effectivement même si toutes les observations du jeu de données correspondantes à un fort risque sont faussement étiquetées, cela aura un faible impact sur la valeur de l’accuracy. A titre d’exemple, les observations correspondantes à un fort risque représentent 1% du jeu de données le fait qu'elles soient toutes mal étiquetées fera au plus diminuer de 1% l’accuracy.\n",
+    "\n",
+    "La précision équilibrée corrige cela en donnant la moyenne des taux d'erreurs dans chacune des 2 populations (les malades/sains ou ici les femme à fort/faible risque obstétrique). Il permet de mettre en valeur les performances du test sur chacune de ces 2 populations de manière équilibrée, même si l’une d’elle est nettement sur-représentée dans le jeu d’observations. "
    ]
   },
   {
@@ -831,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "d5023eba",
    "metadata": {},
    "outputs": [
@@ -910,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "7fe6d841",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
