modifications partie Honoré 26/06

--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -436,14 +436,7 @@
    "id": "95e3a99b",
    "metadata": {},
    "source": [
-    "Les graphiques montrent que certaines variables comme l’âge, la tension artérielle et la glycémie séparent assez bien les groupes, surtout pour les risques élevés. \n",
-    "\n",
-    "En revanche, la température et la fréquence cardiaque au repos n’apportent pas beaucoup d’information pour distinguer les classes. \n",
-    "\n",
-    "Il y a donc un certain recouvrement entre les groupes mais les écarts restent visibles pour plusieurs variables. On peut s’attendre à ce que le modèle arrive à distinguer une partie des cas même si la séparation ne sera pas parfaite.\n",
-    "La prédiction ne sera pas triviale mais elle semble faisable. \n",
-    "\n",
-    "# judidieux de faire une ACP après. "
+    "Les graphiques montrent que certaines variables comme l’âge, la tension artérielle et la glycémie séparent assez bien les groupes, surtout pour les risques élevés. En revanche, la température et la fréquence cardiaque au repos n’apportent pas beaucoup d’information pour distinguer les classes. Il y a donc un certain recouvrement entre les groupes mais les écarts restent visibles pour plusieurs variables. On peut s’attendre à ce que le modèle arrive à distinguer une partie des cas même si la séparation ne sera pas parfaite. La prédiction ne sera pas triviale mais elle semble faisable. Ainsi, une analyse en composantes principales permettrait de réduire la dimensionnalité sans perdre trop d’information, ce qui simplifierait l’apprentissage et limiterait le risque de surapprentissage, surtout si certaines variables sont redondantes ou peu informatives."
    ]
   },
   {
@@ -831,7 +824,7 @@
    "id": "9311c632",
    "metadata": {},
    "source": [
-    "Pour le plus proche voisin, il n’y a pas d’apprentissage au sens classique, puisqu'on garde simplement toutes les données du jeu d’entraînement en mémoire. L'algorithme se contente de stocker les observations du jeu d'entrainement, pour pouvoir ensuite mesurer la distance entre ces-dernières et de nouvelles observations. L’algorithme ne calcule pas de coefficients ou de modèle, et la phase d'entrainement ne consiste pas en une optimisation (comme par exemple pour ???), mais plutôt en une mémorisation des données d'entrainement."
+    "Pour le plus proche voisin, il n’y a pas d’apprentissage au sens classique, puisqu'on garde simplement toutes les données du jeu d’entraînement en mémoire. L'algorithme se contente de stocker les observations du jeu d'entrainement, pour pouvoir ensuite mesurer la distance entre ces-dernières et de nouvelles observations. L’algorithme ne calcule pas de coefficients ou de modèle, et la phase d'entrainement ne consiste pas en une optimisation (comme par exemple pour les réseaux de neuronnes), mais plutôt en une mémorisation des données d'entrainement."
    ]
   },
   {
@@ -848,10 +841,9 @@
    "id": "1438e9e4",
    "metadata": {},
    "source": [
-    "Quand on applique le plus proche voisin avec k=1 sur le jeu d’entraînement, chaque point a pour plus proche voisin lui-même (distance nulle) : il n’y a ni faux positifs ni faux négatifs. Donc, l’algorithme retrouve forcément la bonne étiquette pour chaque point sauf si deux points différents ont exactement les mêmes coordonnées mais des étiquettes différentes (ce qui n'est pas le cas ici comme cela est montré ci-dessous). \n",
+    "Quand on applique le plus proche voisin avec k=1 sur le jeu d’entraînement, chaque point a pour plus proche voisin lui-même (distance nulle) : il n’y a ni faux positifs ni faux négatifs. Donc, l’algorithme retrouve forcément la bonne étiquette pour chaque point sauf si deux points différents ont exactement les mêmes coordonnées mais des étiquettes différentes (ce qui n'est pas le cas ici comme cela est démontré ci-dessous). Ainsi, la précision équilibrée du plus proche voisin sera de 1. \n",
     "\n",
-    "Ainsi, la précision équilibrée du plus proche voisin sera de 1. \n",
-    "# intéret d'avoir un  jeu de validation"
+    "Cependant, ce résultat parfait n'est valable que sur le jeu d'entraînement car l'algorithme retrouve systématiquement l'étiquette de chaque point déjà vu. Cela montre l'importance d'utiliser un jeu de validation (ou une validation croisée) : cela permet d'évaluer la capacité réelle du modèle à généraliser sur de nouvelles données et non simplement à \"mémoriser\" les exemples d'entraînement. Ainsi, sans jeu de validation, on risque de surestimer la performance du modèle et de ne pas détecter un éventuel surapprentissage.\n"
    ]
   },
   {
@@ -889,15 +881,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "53",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Précision équilibrée (k=1): 1.0\n"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m balanced_accuracy_score\n\u001b[1;32m      4\u001b[0m knn \u001b[38;5;241m=\u001b[39m KNeighborsClassifier(n_neighbors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m knn\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX_train\u001b[49m, y_train)\n\u001b[1;32m      7\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m knn\u001b[38;5;241m.\u001b[39mpredict(X_train)\n\u001b[1;32m      9\u001b[0m ba \u001b[38;5;241m=\u001b[39m balanced_accuracy_score(y_train, y_pred)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
@@ -911,7 +907,7 @@
     "y_pred = knn.predict(X_train)\n",
     "\n",
     "ba = balanced_accuracy_score(y_train, y_pred)\n",
-    "print(f\"Précision équilibrée (k=1): {ba}\")"
+    "print(f\"Précision équilibrée: {ba}\")"
    ]
   },
   {
@@ -935,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7fe6d841",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7a4f1309",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
