--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -1445,7 +1445,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2da48debfb0>"
+       "<matplotlib.legend.Legend at 0x231826991f0>"
       ]
      },
      "execution_count": 17,
@@ -2542,7 +2542,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2da49079190>"
+       "<matplotlib.legend.Legend at 0x231827012e0>"
       ]
      },
      "execution_count": 21,
@@ -6145,9 +6145,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "102",
+   "id": "052a225b",
    "metadata": {},
-   "source": []
+   "source": [
+    "De manière directe, l’algorithme des K plus proches voisins et la forêt aléatoire sont des algorithmes d’apprentissage supervisé opérants pour une classification à trois classes. En effet, le premier modèle prédictif classe une nouvelle observation en fonction, uniquement, de celles du jeu d'entraînement  les plus proches dans l’espace des caractéristiques, et peut s’adapter un nombre quelconque de classes. Le second modèle convient également puisque les arbres de décision d’une forêt aléatoire peuvent tout à fait présenter trois feuilles au bout de chacune de leur branche (et non seulement 2 comme dans la classification binaire précédente). \n",
+    "\n",
+    "De manière indirecte, la régression logistique pourrait également être adaptée pour fonctionner dans cette nouvelle configuration. On peut utiliser une régression logistique multinomiale (aussi appelée softmax regression), voire même une stratégie “one-vs-one” ou \"one-vs-rest” qui permettent de transformer un problème de classification à au moins 3 classes à un problème de classification binaire."
+   ]
   },
   {
    "cell_type": "markdown",
